--- a/jonathanBeard/index.css
+++ b/jonathanBeard/index.css
@@ -115,6 +115,10 @@
   border: 4px solid var(--accent-color);
 }
 
+.box-shadow {
+  box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, .09);
+}
+
 
 
 /* social media icons */
